force-app/main/default/objects/Contract_Line_Item_Approval__c/Contract_Line_Item_Approval__c.object-meta.xml
<CustomObject>
    <description>Custom object to track the progress of a line item approval. The custom object route met the business requirements most aptly, specifically the ability to auto-escalate on a time-based schedule.</description>
    <label>Contract Line Item Approval</label>
    <nameField>
        <displayFormat>#{00000}</displayFormat>
        <label>Contract Line Item Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>