force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Actioned_By__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By__c</fullName>
    <description>Created by BW to update whenever the status changes from Pending</description>
    <label>Actioned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>