force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Actioned_By_Previous__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By_Previous__c</fullName>
    <formula>Previous_Approval__r.Actioned_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actioned By (Previous)</label>
    <type>Text</type>
</CustomField>