force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date__c</fullName>
    <description>Created by BW to identify the date the status changes from Pending</description>
    <label>Actioned Date</label>
    <type>DateTime</type>
</CustomField>