force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Actioned_Date_Previous__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date_Previous__c</fullName>
    <formula>Previous_Approval__r.Actioned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actioned Date (Previous)</label>
    <type>DateTime</type>
</CustomField>