force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Agreement_Score__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Score__c</fullName>
    <description>Score, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Agreement Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>