force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <formula>&quot;$&quot;+ &apos;&apos; + Text(Contract_Line_Item__r.X12MonthSalesVolume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Sales</label>
    <type>Text</type>
</CustomField>