force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Approval_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Approval_Sequence__c</fullName>
    <description>Essentially maps to whether this was for an SM or for a GM. This value will be populated from process builder. 1= the first approval record created and the one designed for the SM. 2= the second approval record created and the one for the GM/pricing team. This field is created so that the time-based workflow rule knows when to cancel the second record rather than create an additional CLI. The second record never needs to expire.</description>
    <label>Approval Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>