force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>