force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Camp_Excep_Date__c.field-meta.xml
<CustomField>
    <fullName>Camp_Excep_Date__c</fullName>
    <formula>IF( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c == &apos;&apos;, &apos; N.A.&apos; , LEFT(TEXT( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignEffectiveDate__c),10)) + &apos; | &apos;+ LEFT(TEXT(Contract_Line_Item__r.zpl__EffectiveDate__c),10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camp |  Excep Date</label>
    <type>Text</type>
</CustomField>