force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Campaign_Cost__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Cost__c</fullName>
    <description>Calculated Campaign Cost</description>
    <label>Campaign Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>