force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Campaign_GTM_Pct__c.field-meta.xml
<CustomField>
    <fullName>Campaign_GTM_Pct__c</fullName>
    <description>Campaign GTM Percentage</description>
    <label>Campaign GTM Pct</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>