force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>IF( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c == &apos;&apos;, &apos; N.A.&apos; , Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>