force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Campaign_Recommended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Recommended_Cost__c</fullName>
    <description>Campaign Recommended Cost, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>New Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>