force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Class, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>