force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Created by BW to tracking the comments associated with Contract line item approval records</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>