force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>HYPERLINK(&quot;https://veritiv.lightning.force.com/lightning/r/Contract/&quot;&amp;Contract_Line_Item__r.zpl__Contract__r.Id&amp;&quot;/view&quot;, Contract_Line_Item__r.zpl__Contract__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract</label>
    <type>Text</type>
</CustomField>