force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by BW to reference the contract line item on the Contract Line Item Approval records</description>
    <inlineHelpText>Please select the corresponding contract line item associated with the Contract Line Item Approval record.</inlineHelpText>
    <label>Contract Line Item</label>
    <referenceTo>zpl__ContractLineItem__c</referenceTo>
    <relationshipLabel>Contract Line Item Approvals</relationshipLabel>
    <relationshipName>Contract_Line_Item_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>