force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Contract_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Policy_Type__c</fullName>
    <formula>Contract_Line_Item__r.zpl__PolicyType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Policy Type</label>
    <type>Text</type>
</CustomField>