force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Created_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Text__c</fullName>
    <description>Text version for Created Date.</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))+&quot;-&quot;+LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&quot;0&quot;)+&quot;-&quot;+LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text version for Created Date.</inlineHelpText>
    <label>Created Date Text</label>
    <type>Text</type>
</CustomField>