force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Created_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped from the contract line item at creation by process builder to show a CLIA approver key details needed at time of decision. Will be TRUE if the source of the CLI is Q</description>
    <label>Created From Quote?</label>
    <type>Checkbox</type>
</CustomField>