force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Curr_GTM__c.field-meta.xml
<CustomField>
    <fullName>Curr_GTM__c</fullName>
    <formula>IF(
Maintain_GTM_Condition_1__c,

TEXT(ROUND(Contract_Line_Item__r.ORIG_GTM_BULKEDIT__c*100,2))
,
IF(
AND (
OR(Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;Maintain GTM&apos;, Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;List Down&apos;) ,
AND(NOT(ISBLANK(Contract_Line_Item__r.PricingCost__c)), Contract_Line_Item__r.PricingCost__c &gt; 0),
NOT(ISBLANK(Contract_Line_Item__r.CampaignActionReference__c))
),


TEXT(ROUND(Contract_Line_Item__r.aiq_Previous_GTM__c*100,2))
,
IF(
AND (
OR(Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;Fixed Price&apos;, Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;CWT Fixed&apos;) ,
ISBLANK(Contract_Line_Item__r.CampaignActionReference__c)
),

TEXT(ROUND(Contract_Line_Item__r.aiq_Previous_GTM__c*100,2))
,
IF(
AND (
OR(Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;Fixed Price&apos;, Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;CWT Fixed&apos;) ,
NOT(ISBLANK(Contract_Line_Item__r.CampaignActionReference__c))
),

TEXT(ROUND(Contract_Line_Item__r.ORIG_GTM_BULKEDIT__c*100,2))
,

&apos;0&apos;

)

)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curr GTM</label>
    <type>Text</type>
</CustomField>