force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Curr_Rec_Excep_GTM__c.field-meta.xml
<CustomField>
    <fullName>Curr_Rec_Excep_GTM__c</fullName>
    <description>Current, Recommended &amp; Requested (Exception) GTM</description>
    <label>Curr | Rec | Excep GTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>