force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Current_GTM_Pct__c.field-meta.xml
<CustomField>
    <fullName>Current_GTM_Pct__c</fullName>
    <description>Current GTM Percentage</description>
    <label>Current GTM Pct</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>