force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Current_GTM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Current_GTM_Percentage__c</fullName>
    <formula>IF(Contract_Line_Item__r.PrecedingCampPrice__c=0,0,(Contract_Line_Item__r.PrecedingCampPrice__c-Contract_Line_Item__r.PreviousCost__c)/Contract_Line_Item__r.PrecedingCampPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current GTM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>