force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Currrent_Price__c.field-meta.xml
<CustomField>
    <fullName>Currrent_Price__c</fullName>
    <description>Current Price</description>
    <label>Currrent Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>