force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>All details needed for an approver to make their decision.</description>
    <formula>&quot;Div | Account: &quot; &amp; Contract_Line_Item__r.zpl__Contract__r.Account.Legacy_Division_Cd__c + &apos; | &apos; +
Contract_Line_Item__r.zpl__Contract__r.Account.AccountNumber + &apos; | &apos; + Contract_Line_Item__r.zpl__Contract__r.Account.Name
&amp; br() &amp;

&quot;Vendor: &quot; &amp; Contract_Line_Item__r.zpl__Product__r.Legacy_Vendor_Name__c 
&amp; br() &amp;

&quot;Campaign: &quot; &amp; IF( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c == &apos;&apos;, &apos; N.A.&apos; , Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c) 
&amp; br() &amp;

&quot;Camp | Excep Date: &quot; &amp; IF( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignName__c == &apos;&apos;, &apos; N.A.&apos; , TEXT( Contract_Line_Item__r.CampaignAppealedLine__r.CampaignEffectiveDate__c)) + &apos; | &apos;+ TEXT(Contract_Line_Item__r.zpl__EffectiveDate__c) 
&amp; br() &amp;

&quot;Sales Rep: &quot; &amp; Contract_Line_Item__r.zpl__Contract__r.Sales_Rep__c 
&amp; br() &amp;

&quot;UOM | Item: &quot; &amp; Contract_Line_Item__r.PricingUOM__c + &apos; | &apos; + Item_Description__c 
&amp; br()&amp;

&quot;Reason Code | Comments: &quot; &amp; text(Contract_Line_Item__r.Reason_Code__c) + &apos; | &apos; + Contract_Line_Item__r.Comments__c &amp; br() &amp;

&quot;Price Guidance: &quot; &amp; Price_Guidance__c  &amp; br() &amp;

&quot;Annual Sales: $&quot; &amp; TEXT(Contract_Line_Item__r.X12MonthSalesVolume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>