force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Division, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>