force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <formula>Contract_Line_Item__r.zpl__Contract__r.Account.Legacy_Division_Cd__c + &apos; | &apos; + Contract_Line_Item__r.zpl__Contract__r.Account.AccountNumber + &apos; | &apos; + Contract_Line_Item__r.zpl__Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division|Account</label>
    <type>Text</type>
</CustomField>