force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Divison_Code_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Divison_Code_and_Name__c</fullName>
    <formula>Division__c  + &apos; &apos; +&apos;|&apos;+ &apos; &apos; + Contract_Line_Item__r.Division__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divison Code and Name</label>
    <type>Text</type>
</CustomField>