force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Created by BW to reflect when the assigned approver must action the record by.  Formula eliminates weekends.</description>
    <formula>/*CreatedDate  +  Timeframe_days__c

Here is the formula that holds the custom labels and skips weekends
*/
DATETIMEVALUE(DATE(1900,1,1)) +

(
FLOOR( (CreatedDate  - DATETIMEVALUE(DATE(1900,1,1)))/7)*5 +
CASE(
MOD((CreatedDate   - DATETIMEVALUE(DATE(1900,1,1))),7),
5,4,
6,4,
MOD((CreatedDate   - DATETIMEVALUE(DATE(1900,1,1))),7)
)
+
Timeframe_days__c
)
+
2*
(FLOOR(
(
FLOOR((CreatedDate   - DATETIMEVALUE(DATE(1900,1,1)))/7)*5 +
CASE(
MOD((CreatedDate   - DATETIMEVALUE(DATE(1900,1,1))),7),
5,4,
6,4,
MOD((CreatedDate   - DATETIMEVALUE(DATE(1900,1,1))),7)
)
+
Timeframe_days__c)
/5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approve or reject by this time</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>