force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Duration_Between_Submission__c.field-meta.xml
<CustomField>
    <fullName>Duration_Between_Submission__c</fullName>
    <formula>Actioned_Date__c - SubmittedUserDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Between Submissions)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>