force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Duration_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Duration_Level_2__c</fullName>
    <formula>Actioned_Date__c -  SubmittedUserDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Level 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>