force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>Stamped value of the CLI at the time of creation. Process builder will stamp the value from the CLI on creation of the first one; if the first CLIA expires then process builder will stamp the value from the first CLIA onto the second.</description>
    <inlineHelpText>The Floor_Price__c at the time of submission</inlineHelpText>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>