force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Generic_Blank_Field__c.field-meta.xml
<CustomField>
    <fullName>Generic_Blank_Field__c</fullName>
    <description>Generic Blank Field</description>
    <label>Generic Blank Field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>