force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/GM_Owned__c.field-meta.xml
<CustomField>
    <fullName>GM_Owned__c</fullName>
    <description>Checks to see if a record is owned (assigned) to a GM or not. Records assigned to a GM should be editable and easy to find by the pricing team</description>
    <formula>CONTAINS(Owner:User.Role_Name__c , &quot;- GM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigned to a GM?</inlineHelpText>
    <label>GM Owned?</label>
    <type>Checkbox</type>
</CustomField>