force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/GTM_Cost__c.field-meta.xml
<CustomField>
    <fullName>GTM_Cost__c</fullName>
    <description>GTM Cost to be used in the GTM Percent calculations</description>
    <label>GTM_Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>