force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Item_Contract_Score__c.field-meta.xml
<CustomField>
    <fullName>Item_Contract_Score__c</fullName>
    <formula>TEXT(Item_Score__c) + &apos; | &apos; +  TEXT(  Contract_Line_Item__r.zpl__Contract__r.Score__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item | Contract Score</label>
    <type>Text</type>
</CustomField>