force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Item Description, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>