force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Item Number, stamped from the contract line item&apos;s product at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Item Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>