force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Item_Score__c.field-meta.xml
<CustomField>
    <fullName>Item_Score__c</fullName>
    <description>Item Score, stamped from the contract line item at creation by process builder, to show a CLIA approver key details needed at time of decision.</description>
    <label>Item Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>