force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Maintain_GTM_Condition_1__c.field-meta.xml
<CustomField>
    <fullName>Maintain_GTM_Condition_1__c</fullName>
    <formula>AND (
	OR(Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;Maintain GTM&apos;, Contract_Line_Item__r.zpl__PolicyType__r.Name == &apos;List Down&apos;) ,
	OR(ISBLANK(Contract_Line_Item__r.PricingCost__c), Contract_Line_Item__r.PricingCost__c == 0),
	ISBLANK(Contract_Line_Item__r.CampaignActionReference__c)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintain GTM Condition 1</label>
    <type>Checkbox</type>
</CustomField>