force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/My_CLIA_Submission__c.field-meta.xml
<CustomField>
    <fullName>My_CLIA_Submission__c</fullName>
    <description>Used to deliver a list view for sales reps who want to see where the CLIs they submitted for approval stand.</description>
    <formula>CreatedById =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My CLIA Submission</label>
    <type>Checkbox</type>
</CustomField>