force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/New_Campaign_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Campaign_Price__c</fullName>
    <description>New Campaign Price.</description>
    <label>New Campaign Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>