force-app/main/default/objects/Contract_Line_Item_Approval__c/fields/Not_Available__c.field-meta.xml
<CustomField>
    <fullName>Not_Available__c</fullName>
    <formula>If(or(ISNULL(Generic_Blank_Field__c), ISBLANK(Generic_Blank_Field__c)),&apos;N.A.&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Available</label>
    <type>Text</type>
</CustomField>